Fixes text align in examples page

--- a/styles.css
+++ b/styles.css
@@ -238,8 +238,14 @@ button {
 
 .experience-examples-year { grid-area: year;}
 
-.experience-examples-langauges { grid-area: langauges;}
+.experience-examples-language {grid-area: languages;}
 
 .experience-examples-link { grid-area: link;}
 
 .experience-examples-description { grid-area: description;}
+
+@media (max-width: 750px) {
+  .experience-examples-name, .experience-examples-year, .experience-examples-language, .experience-examples-link {
+    text-align: center;
+  }
+}
